dac/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dac
  namespace: dac
spec:
  selector:
    app: dac
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
