dac/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dac
  namespace: dac
spec:
  ingressClassName: traefik
  rules:
    - host: dac.aneeshmaganti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dac
                port:
                  number: 80
